--- a/css/style.css
+++ b/css/style.css
@@ -78,6 +78,9 @@ header .head-top-right a {
 	color: #FFFFFF;
 	margin-right: 30px;
 }
+header .head-top-right a:hover {
+	text-decoration: underline;
+}
 header .head-top-right a:last-child {
 	margin-right: 0;
 }
@@ -159,6 +162,9 @@ header .head-contact .head-social a {
 header .head-contact .head-social a:last-child {
 	margin-right: 0;
 }
+header .head-contact .head-social a:hover {
+	transform: scale(.96);
+}
 header .head-contact .head-tel p {
 	margin-bottom: 4px;
 	font-weight: 600;
@@ -187,6 +193,9 @@ header .head-contact .head-call a {
 	text-align: center;
 	background: #53C5E2;
 	border-radius: 4px;
+}
+header .head-contact .head-call a:hover {
+	transform: scale(.98);
 }
 /* / */
 header .nav-con {
@@ -305,12 +314,12 @@ main {
 	line-height: 110%;
 	color: #414042;
 }
-.main-content .product-name .compare {
+.main-content .compare {
 	display: flex;
 	align-items: center;
 	margin-left: 20px;
 }
-.main-content .product-name .compare .compare-icon {
+.main-content .compare .compare-icon {
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -320,14 +329,14 @@ main {
 	border-radius: 4px;
 	margin-right: 12px;
 }
-.main-content .product-name .compare .compare-text p {
+.main-content .compare .compare-text p {
 	font-weight: 500;
 	font-size: 14px;
 	line-height: 24px;
 	color: #414042;
 	margin-bottom: 4px;
 }
-.main-content .product-name .compare .compare-text a {
+.main-content .compare .compare-text a {
 	font-weight: 500;
 	font-size: 14px;
 	line-height: 16px;
@@ -713,6 +722,9 @@ main {
 	border-radius: 4px;
 	border: none;
 }
+.main-description .nav-tabs .nav-link img {
+	display: none;
+}
 .main-description .nav-tabs .nav-link:last-child {
 	width: 100%;
 }
@@ -883,6 +895,10 @@ main {
 	align-items: center;
 	justify-content: space-between;
 	margin-bottom: 20px;
+}
+.similar-sec .similar-block .similar-date > span {
+	font-size: 16px;
+	line-height: 110%;
 }
 .similar-sec .similar-block .similar-date-in {
 	display: flex;
@@ -1366,8 +1382,505 @@ input[type=number] {
   -moz-appearance: textfield;
 }
 
+.main-content .compare.mob {
+	display: none;
+}
+
+@media only screen and (max-width: 1400px){
+	header .head-logo-link span {
+		display: none;
+	}
+	header .navbar .nav-item .nav-link {
+		font-size: 14px;
+	}
+	.main-description .nav-tabs .nav-link {
+		padding: 5px 10px;
+	}
+}
 
 
-/*@media only screen and (max-width: 480px){}*/
+@media only screen and (max-width: 1200px) {
+	header .head-contact .head-call a {
+		width: 150px;
+	}
+	header .head-contact .head-tel p {
+		font-size: 18px;
+		line-height: 1.2;
+	}
+	header .navbar .nav-item .basket-link span {
+		display: none;
+	}
+	header .navbar .nav-item .nav-link {
+		font-size: 13px;
+	}
+	header .navbar .nav-item .basket-link img {
+		margin: 0;
+	}
+	header .nav-con {
+		padding: 15px 0;
+	}
+	.main-sec .main-sidebar form p {
+		font-size: 14px;
+		line-height: 16px;
+		margin-bottom: 15px;
+	}
+	.main-sec .main-sidebar {
+		padding: 20px 10px;
+	}
+	.main-recommend .recommend-block {
+		margin-bottom: 30px;
+	}
+	.main-description .nav-tabs .nav-link:last-child,
+	.main-description .nav-tabs .nav-link {
+		width: auto;
+		padding: 10px 15px;
+	}
+	.main-description .nav-tabs {
+		flex-wrap: wrap;
+	}
+	.main-description .tab-list ul li {
+		font-size: 14px;
+		line-height: 130%;
+	}
+	footer .ftr-left .ftr-menu a {
+		font-size: 14px;
+		line-height: 110%;
+	}
+	footer .ftr-center {
+		padding: 0;
+	}
+	footer .ftr-address p br {
+		display: none;
+	}
+	footer .ftr-address p {
+		font-size: 14px;
+	}
+	footer .ftr-address a {
+		font-size: 14px;
+		line-height: 20px;
+	}
+	footer .ftr-end p,
+	footer .ftr-end > a {
+		line-height: 18px;
+	}
+	.title h2 {
+		font-size: 34px;
+		line-height: 110%;
+		margin-bottom: 30px;
+	}
+	footer .ftr-end .ftr-dev .dev-site {
+		margin-right: 0;
+		margin-bottom: 20px;
+	}
+	footer .ftr-end {
+		align-items: flex-start;
+	}
+	footer .ftr-contact h4 {
+		font-size: 20px;
+	}
+	.main-content .product-name h1 {
+		font-size: 34px;
+	}
+	.main-content .product-price .price-num h2 {
+		font-size: 24px;
+		line-height: 110%;
+	}
+	.main-content .product-text-in {
+		padding: 20px;
+	}
+	header .head-top-left p span {
+		display: block;
+	}
+	
+}
+
+@media only screen and (max-width: 992px) {
+	.swiper-slide .col-lg-12 {
+		width: 100%;
+	}
+	header .head-contact .head-social {
+		display: none;
+	}
+	header .head-search {
+		width: 220px;
+	}
+	header .head-top-right a:nth-child(1),
+	header .head-top-right a:nth-child(2) {
+		display: none;
+	}
+}
 
 
+@media only screen and (max-width: 767px) {
+	header .head-search,
+	header .head-contact .head-social, header .head-contact,
+	header .head-top-con {
+		display: none;
+	}
+	header .nav-con {
+		display: none;
+	}
+	header .head-logo-link span {
+		display: inline-block;
+	}
+	.main-sec .main-right-col {
+		order: 1;
+	}
+	.main-sec .main-right-col.pl-10 {
+		padding-left: 15px;
+	}
+	.main-sec .main-left-col {
+		order: 2;
+	}
+	.main-sec .main-left-col.pr-10 {
+		padding-right: 15px;
+	}
+	.breadcrumb {
+		flex-wrap: nowrap;
+		overflow-y: hidden;
+		overflow-x: auto;
+		justify-content: flex-end;
+		margin-bottom: 20px;
+	}
+	.breadcrumb-item+.breadcrumb-item {
+		display: flex;
+		align-items: center;
+	}
+	.main-content .compare {
+		display: none;
+	}
+	.main-content .compare.mob {
+		display: block;
+	}
+	.main-content .product-name h1 {
+		font-size: 32px;
+	}
+	.main-content .product-col {
+		display: flex;
+		flex-direction: column;
+		align-items: flex-start;
+	}
+	.main-content .product-col > div {
+		width: 100%;
+	}
+	.main-content .product-info {
+		order: 4;
+		flex-direction: column;
+		margin-top: 30px;
+	}
+	.main-content .product-text {
+		order: 5;
+	}
+	.main-content .product-price {
+		order: 1;
+		margin-top: 25px;
+	}
+	.main-content .product-count {
+		order: 2;
+	}
+	.product-social {
+		order: 3;
+		align-items: center;
+	}
+	.main-content .compare {
+		order: 6;
+	}
+	/* /// */
+	.main-content .product-count .count {
+		order: 2;
+		margin-right: 0;
+		margin-left: 10px;
+	}
+	.main-content .product-count .cart-btn {
+		order: 1;
+	}
+	.product-social p {
+		max-width: 100%;
+		font-size: 14px;
+	}
+	.main-content .product-info .product-info-item {
+		margin-bottom: 20px;
+	}
+	.main-content .product-info .product-info-item:last-child {
+		margin-bottom: 0;
+	}
+	.main-content .compare.mob {
+		width: auto;
+		display: flex;
+		align-items: center;
+	}
+	.main-content .compare.mob .compare-text {
+		display: flex;
+		align-items: center;
+	}
+	.main-content .compare .compare-text p {
+		margin-right: 12px;
+	}
+	.main-recommend {
+		padding-top: 60px;
+	}
+	.main-recommend .pc {
+		display: none;
+	}
+	.title h2 {
+		font-size: 32px;
+		line-height: 35px;
+		margin-bottom: 20px;
+	}
+	.main-recommend .recommend-block .recommend-name h5 {
+		font-size: 14px;
+		line-height: 18px;
+	}
+	.main-recommend .recommend-block {
+		margin-bottom: 0;
+		padding: 10px;
+	}
+	.main-recommend .recommend-block .recommend-img {
+		height: 150px;
+	}
+	.main-recommend .recommend-block .recommend-img img {
+		height: 100%;
+	}
+	.main-recommend .recommend-block .recommend-name {
+		height: auto;
+		margin: 10px 0;
+	}
+	.main-recommend .recommend-block .recommend-price p {
+		display: none;
+	}
+	.main-recommend .recommend-block .recommend-price.mob p {
+		display: block;
+		margin: 10px 0 4px;
+	}
+	.main-recommend .recommend-block .recommend-price {
+		margin: 0;
+	}
+	.main-recommend .recommend-block .recommend-price h4 {
+		font-size: 18px;
+		line-height: 22px;
+		margin: 10px 0 20px;
+	}
+	.main-description {
+		padding-top: 60px;
+	}
+	.main-description .nav-tabs {
+		padding: 0;
+		background: transparent;
+		height: 51px;
+		overflow: hidden;
+		transition: .3s all ease;
+	}
+	.main-description .nav-tabs.active {
+		height: 286px;
+	}
+	.main-description nav::after {
+		content: none;
+	}
+	.main-description .nav-tabs .nav-link:last-child {
+		width: 100%;
+	}
+	.main-description .nav-tabs .nav-link {
+		width: 100%;
+		order: 2;
+		padding: 17px 15px;
+		border-radius: 0;
+	}
+	.main-description .nav-tabs .nav-link.active {
+		order: 1;
+	}
+	.main-description .nav-tabs .nav-link img {
+		display: inline-block;
+		margin-left: 8px;
+		opacity: 0;
+	}
+	.main-description .nav-tabs .nav-link.active img {
+		opacity: 1;
+	}
+	.main-description .nav-tabs.active .nav-link img {
+		transform: rotate(180deg);
+		top: 2px;
+	}
+	.main-description .tab-content {
+		margin-top: 30px;
+	}
+	.main-description .tab-list ul li {
+		font-size: 16px;
+		line-height: 19px;
+	}
+	.main-description .tab-list .tab-list-in {
+		margin-bottom: 30px;
+		min-height: auto;
+	}
+	.main-description .tab-list-col.pr-10 {
+		padding-left: 15px;
+	}
+	.main-description .tab-list-col.pr-10 {
+		padding-right: 15px;
+	}
+	.similar-sec {
+		padding-top: 60px;
+	}
+	.similar-sec .similar-block .similar-btn {
+		flex-wrap: wrap;
+	}
+	.similar-sec .similar-block .similar-btn .similar-btn-cart {
+		width: 49%;
+		margin: 0;
+	}
+	.similar-sec .similar-block .similar-btn .similar-btn-compare {
+		width: 49%;
+	}
+	.similar-sec .similar-block .similar-btn .similar-btn-buy {
+		margin-bottom: 10px;
+	}
+	.swiper-button-next3, .swiper-button-prev3 {
+		top: auto;
+		bottom: 0;
+	}
+	.similar-sec-block {
+		padding-bottom: 80px;
+	}
+	.swiper-button-prev3 {
+		left: 36%;
+	}
+	.swiper-button-next3 {
+		right: 36%;
+	}
+	.similar-sec .similar-block {
+		padding: 10px;
+	}
+	.similar-sec .similar-block .similar-name h5 {
+		font-size: 14px;
+		line-height: 17px;
+	}
+	.similar-sec .similar-block .similar-text p {
+		font-size: 12px;
+		line-height: 15px;
+	}
+	.similar-sec .similar-block .similar-price p {
+		display: none;
+	}
+	.similar-sec .similar-block .similar-price.mob p {
+		display: block;
+	}
+	.similar-sec .similar-block .similar-price h4 {
+		font-size: 16px;
+		line-height: 20px;
+	}
+	.similar-sec .similar-block .similar-price del {
+		font-size: 12px;
+		line-height: 16px;
+	}
+	.similar-sec .similar-block .similar-date,
+	.similar-sec .similar-block .similar-name {
+		flex-direction: column;
+		align-items: flex-start;
+		margin: 10px 0;
+	}
+	.similar-sec .similar-block .similar-date-in .sum {
+		width: 80px;
+	}
+	.similar-sec .similar-block .similar-date-in .num {
+		width: 40px;
+	}
+	.similar-sec .similar-block .similar-date-in p {
+		font-size: 14px;
+		line-height: 110%;
+	}
+	.similar-slide .similar-slide-content,	
+	.similar-sec .similar-block .similar-img {
+		height: 150px;
+	}
+	.similar-slide .similar-slide-content .swiper-slide a {
+		height: 100%;
+	}
+	.similar-sec .similar-block .fixed-tag {
+		font-size: 10px;
+		line-height: 110%;
+		padding: 5px;
+	}
+	.similar-sec .similar-block .similar-link a {
+		font-size: 12px;
+		margin-bottom: 10px;
+	}
+	.similar-sec .similar-block .similar-date-in .sum, .similar-sec .similar-block .similar-date-in .num,
+	.similar-sec .similar-block .similar-btn .similar-btn-compare, .similar-sec .similar-block .similar-btn .similar-btn-cart {
+		height: 30px;
+	}
+	.similar-sec .similar-block .similar-date > span {
+		font-size: 14px;
+		margin-bottom: 10px;
+	}
+	.similar-sec .similar-block .similar-name span {
+		order: 1;
+	}
+	.similar-sec .similar-block .similar-name h5 {
+		order: 2;
+	}
+
+	.swiper-button-next2 {
+		right: 10px;
+	}
+	.swiper-button-prev2 {
+		left: 10px;
+	}
+	footer .ftr-center {
+		padding-left: 15px;
+		padding-right: 15px;
+	}
+	footer .ftr-catalog .row {
+		display: none;
+	}
+	footer .ftr-left {
+		margin-bottom: 20px;
+		align-items: center;
+	}
+	footer .ftr-left .ftr-logo {
+		margin-right: 20px;
+	}
+	footer .ftr-left .ftr-catalog p {
+		margin-bottom: 0;
+	}
+	footer .ftr-right > p {
+		margin-bottom: 14px;
+	}
+	footer .ftr-socials a img {
+		width: 40px;
+		height: 40px;
+	}
+	footer .ftr-right.two > p {
+		margin: 20px 0 12px;
+		font-size: 16px;
+	}
+	footer .ftr-contact h4 {
+		line-height: 100%;
+	}
+	footer .ftr-address.two {
+		margin-top: 12px;
+	}
+	footer .ftr-mail a {
+		margin-top: 12px;
+	}
+	footer .ftr-end {
+		flex-direction: column;
+	}
+	footer .ftr-end .ftr-dev {
+		display: flex;
+		flex-direction: column;
+	}
+	footer .ftr-end p, footer .ftr-end > a {
+		font-size: 14px;
+		line-height: 110%;
+		margin-bottom: 14px;
+	}
+	footer .ftr-end .ftr-dev .dev-site {
+		margin-bottom: 10px;
+	}
+	footer .ftr-con {
+		padding-top: 30px;
+		padding-bottom: 30px;
+	}
+	footer {
+		padding-top: 30px;
+	}
+}
