--- a/app/css/card.css
+++ b/app/css/card.css
@@ -95,6 +95,9 @@ header {
 	line-height: 130%;
 	color: #FFFFFF;
 }
+.main-sec .main-sidebar .form-checkboxk span a {
+	text-decoration: underline;
+}
 /* / */
 .main-content .product-name {
 	display: flex;
@@ -2885,7 +2888,9 @@ header {
 	font-size: 11px;
 	line-height: 18px;
 } 
-
+.cta-label p a {
+	text-decoration: underline;
+}
 .rent-calc.active {
 	display: block;
 }
@@ -3404,9 +3409,257 @@ header {
 }
 /* //////////////// */
 
+/* add to card */
+.add-to-cart {
+  --color: #fff;
+  --icon: var(--color);
+  --cart: #fff;
+  --dots: #fff;
+  --background: #275EFE;
+  --shadow: rgba(0, 9, 61, 0.16);
+  cursor: pointer;
+  position: relative;
+  outline: none;
+  border: none;
+  -webkit-appearance: none;
+  -webkit-tap-highlight-color: transparent;
+  transform: scale(var(--s, 0.97));
+  transition: transform 0.3s, box-shadow 0.3s;
+}
+.add-to-cart .default {
+  position: relative;
+  opacity: var(--o, 1);
+  transform: scale(var(--s, 1));
+  transition: transform 0.3s, opacity 0.3s;
+  transition-delay: var(--d, 0.3s);
+}
+
+.add-to-cart .success {
+  opacity: var(--o, 0);
+  transform: translate(-50%, var(--y, 12px));
+  position: absolute;
+  top: 12px;
+  left: 50%;
+  transition: opacity 0.3s, transform 0.3s;
+  transition-delay: var(--d, 0s);
+}
+.add-to-cart .dots {
+  width: 4px;
+  height: 4px;
+  top: 20px;
+  left: 50%;
+  margin-left: -7px;
+  border-radius: 2px;
+  position: absolute;
+  transform-origin: 10px 50%;
+  background: var(--dots);
+  box-shadow: 5px 0 0 var(--dots), 10px 0 0 var(--dots);
+  opacity: var(--o, 0);
+  transform: scale(var(--s, 0.4));
+  transition: opacity 0.3s, transform 0.3s;
+  transition-delay: var(--d, 0s);
+}
+.add-to-cart .cart {
+  position: absolute;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 1;
+  border-radius: inherit;
+  overflow: hidden;
+  -webkit-mask-image: -webkit-radial-gradient(white, black);
+}
+.add-to-cart .cart:before {
+  content: "";
+  position: absolute;
+  width: 20px;
+  height: 16px;
+  top: 17px;
+  right: 100%;
+  z-index: 1;
+  margin-right: -20px;
+  transform: translateX(-18px) rotate(-16deg);
+}
+.add-to-cart .cart > div {
+  top: 13px;
+  right: 100%;
+  transform: translateX(-18px) rotate(-16deg);
+  position: absolute;
+  z-index: 2;
+  transform-origin: 1px 21px;
+}
+.add-to-cart .cart > div:before, .add-to-cart .cart > div:after {
+  content: "";
+  position: absolute;
+  top: var(--t, 4px);
+  left: var(--l, 0);
+  height: 2px;
+  width: var(--w, 18px);
+  background: var(--cart);
+  border-radius: 1px;
+}
+.add-to-cart .cart > div:after {
+  --w: 16px;
+  --t: 14px;
+  --l: 1px;
+}
+.add-to-cart .cart > div > div {
+  width: 2px;
+  height: var(--h, 15px);
+  border-radius: 1px;
+  transform: rotate(var(--r, -8deg));
+  background: var(--cart);
+  position: relative;
+}
+.add-to-cart .cart > div > div:before, .add-to-cart .cart > div > div:after {
+  content: "";
+  position: absolute;
+  background: inherit;
+}
+.add-to-cart .cart > div > div:after {
+  width: 4px;
+  height: 4px;
+  border-radius: 2px;
+  bottom: var(--b, -6px);
+  left: var(--l, 0);
+}
+.add-to-cart .cart > div > div:first-child:before {
+  border-radius: inherit;
+  top: 0;
+  right: 0;
+  height: 2px;
+  width: 6px;
+  transform-origin: 5px 1px;
+  transform: rotate(16deg);
+}
+.add-to-cart .cart > div > div:last-child {
+  --h: 12px;
+  --r: 8deg;
+  position: absolute;
+  left: 16px;
+  bottom: -1px;
+}
+.add-to-cart .cart > div > div:last-child:after {
+  --l: -2px;
+  --b: -5px;
+}
+.add-to-cart.added .default {
+  --o: 0;
+  --s: .8;
+  --d: 0s;
+}
+.add-to-cart.added .default:before {
+  --r: -180deg;
+}
+.add-to-cart.added .default:after {
+  --r: -90deg;
+}
+.add-to-cart.added .dots {
+  --o: 1;
+  --s: 1;
+  --d: .3s;
+  -webkit-animation: dots 2s linear forwards;
+          animation: dots 2s linear forwards;
+}
+.add-to-cart.added .success {
+  --o: 1;
+  --y: 0;
+  --d: 1.8s;
+}
+.add-to-cart.added .cart:before, .add-to-cart.added .cart > div {
+  -webkit-animation: cart 2s forwards;
+          animation: cart 2s forwards;
+}
+.add-to-cart:not(.added):hover {
+  --s: 1;
+  --s-y: 8px;
+  --s-b: 20px;
+}
+.add-to-cart:not(.added):active {
+  --s: .94;
+  --s-y: 2px;
+  --s-b: 6px;
+}
+
+@-webkit-keyframes cart {
+  41%, 49%, 57%, 60% {
+    transform: translateX(18px) rotate(0deg);
+  }
+  40%, 47%, 54% {
+    transform: translateX(18px) rotate(0deg) translateY(1px);
+  }
+  100% {
+    transform: translateX(180px) rotate(-16deg);
+  }
+}
+
+@keyframes cart {
+  41%, 49%, 57%, 60% {
+    transform: translateX(18px) rotate(0deg);
+  }
+  40%, 47%, 54% {
+    transform: translateX(18px) rotate(0deg) translateY(1px);
+  }
+  100% {
+    transform: translateX(180px) rotate(-16deg);
+  }
+}
+@-webkit-keyframes dots {
+  5% {
+    transform: translateY(0);
+  }
+  25% {
+    transform: translateY(-20px) rotate(-32deg);
+    box-shadow: 5px 0 0 var(--dots), 10px 0 0 var(--dots);
+  }
+  31% {
+    box-shadow: 5px -4px 0 var(--dots), 10px -8px 0 var(--dots);
+  }
+  32%, 50% {
+    transform: translateY(0) rotate(0deg);
+    opacity: 1;
+  }
+  45%, 100% {
+    box-shadow: 5px 0 0 var(--dots), 10px 0 0 var(--dots);
+  }
+  51%, 100% {
+    opacity: 0;
+  }
+}
+@keyframes dots {
+  5% {
+    transform: translateY(0);
+  }
+  25% {
+    transform: translateY(-20px) rotate(-32deg);
+    box-shadow: 5px 0 0 var(--dots), 10px 0 0 var(--dots);
+  }
+  31% {
+    box-shadow: 5px -4px 0 var(--dots), 10px -8px 0 var(--dots);
+  }
+  32%, 50% {
+    transform: translateY(0) rotate(0deg);
+    opacity: 1;
+  }
+  45%, 100% {
+    box-shadow: 5px 0 0 var(--dots), 10px 0 0 var(--dots);
+  }
+  51%, 100% {
+    opacity: 0;
+  }
+}
+html {
+  box-sizing: border-box;
+  -webkit-font-smoothing: antialiased;
+}
 
 
 
+
+
+
+/* //////////////////// */
 .for-mob {display: none;}
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
@@ -3430,6 +3683,17 @@ input[type=number] {
 
 
 @media only screen and (max-width: 1200px) {
+	@keyframes cart {
+		41%, 49%, 57%, 60% {
+		  transform: translateX(48px) rotate(0deg);
+		}
+		40%, 47%, 54% {
+		  transform: translateX(48px) rotate(0deg) translateY(1px);
+		}
+		100% {
+		  transform: translateX(180px) rotate(-16deg);
+		}
+	}
 	.main-sec .main-sidebar form p {
 		font-size: 14px;
 		line-height: 16px;
@@ -3472,6 +3736,42 @@ input[type=number] {
 }
 
 @media only screen and (max-width: 992px) {
+	.header-nav .header-cross {
+		right: 15px;
+		top: 15px;
+	}
+	.nav-search {
+		padding: 0 15px 0 12px;
+		margin: 15px 0 25px;
+	}
+	.nav-search .form-group {
+		width: 100%;
+		position: relative;
+	}
+	.nav-search input {
+		width: 100%;
+		height: 50px;
+		background: #FFFFFF;
+		border: 1px solid #DBDDE0;
+		border-radius: 4px;
+		padding: 0 20px;
+	}
+	.nav-search input::placeholder {
+		font-size: 16px;
+		line-height: 20px;
+		color: #909397;
+	}
+	.nav-search button {
+		position: absolute;
+		right: 20px;
+		top: 10px;
+		border: none;
+		background: transparent;
+		padding: 0;
+		top: 0;
+		bottom: 0;
+		margin: auto;
+	}
 	header {
 		overflow: hidden;
 		transition: .5s all ease;
