--- a/app/css/card.css
+++ b/app/css/card.css
@@ -2558,13 +2558,20 @@ header {
 	height: auto;
 	overflow: visible;
 }
-.payment-shipping-block .pay-ship-text a {
+.payment-shipping-block .pay-ship-text a span {
 	margin-top: 10px;
 	display: inline-block;
 	font-weight: 500;
 	font-size: 16px;
 	line-height: 130%;
 	color: #53C5E2;
+}
+.payment-shipping-block .pay-ship-text.active a span.yes,
+.payment-shipping-block .pay-ship-text a span.no {
+	display: none;
+}
+.payment-shipping-block .pay-ship-text.active a span.no {
+	display: inline-block;
 }
 /* contacts page */
 .contact-sec .contact-left {
@@ -2910,7 +2917,7 @@ header {
 	border-radius: 4px;
 }
 .rent-sec .rent-text {
-	padding-right: 50px;
+	padding-right: 10px;
 }
 
 .rent-client {
@@ -4005,6 +4012,9 @@ html {
 }
 
 
+.main-sec.main-sec-mob {
+	margin-top: 0;
+}
 .card-pro-slide .cards-arrow--prev {
 	left: -25px;
 }
@@ -4282,6 +4292,31 @@ input[type=number] {
 
 
 @media only screen and (max-width: 767px) {
+	.order-examine .order-examine-price h4 {
+		font-size: 20px;
+		line-height: 24px;
+		margin-top: 15px;
+	}
+	.order-examine-block {
+		padding: 10px;
+	}
+	.order-examine .order-examine-name span {
+		margin-top: 10px;
+		font-size: 14px;
+		line-height: 16px;
+	}
+	.main-sec.main-sec-mob {
+		margin-top: 210px;
+	}
+	.header-top__list a:hover {
+		color: #299AFB;
+	}
+	.drop-list__item--tasks .drop-list2 a {
+		width: auto;
+	}
+	.main-content .product-col {
+		margin-top: 20px;
+	}
 	.extra-btn a {
 		max-width: 100%;
 	}
