--- a/app/css/card.css
+++ b/app/css/card.css
@@ -4295,6 +4295,12 @@ input[type=number] {
 
 
 @media only screen and (max-width: 767px) {
+	.checkout-sec .pr-10 {
+		padding-right: 15px !important;
+	}
+	.checkout-sec .pl-10 {
+		padding-left: 15px !important;
+	}
 	.modal-body form label span {
 		line-height: 14px;
 	}
